[tool.poetry]
name = "fingerprinting-harness"
version = "0.1.0"
description = ""
authors = ["Imran Hossain <imran@case.edu>", "Zubair Mukhi <zubair@case.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
